refactor: 迁移仓库到 ~/.claude 目录
- 移除旧的学习文档和模板
- 添加完整的 Claude Code 配置 (RULES, COMMANDS, MODES 等)
- 添加 agents, commands, output-styles
- 更新 skills 为本地最新版本
- 配置 .gitignore 忽略敏感文件

--- a/.gitignore
+++ b/.gitignore
@@ -1,25 +1,23 @@
-# OS
+# 敏感配置 - 包含 API Key 和 Token
+settings.json
+settings.local.json
+config.json
+
+# 插件相关 - 从远程拉取，不需要同步
+plugins/
+
+# 运行时数据 - 本地生成
+history.jsonl
+logs/
+debug/
+file-history/
+shell-snapshots/
+session-env/
+statsig/
+ide/
+plans/
+todos/
+projects/
+
+# 系统文件
 .DS_Store
-Thumbs.db
-
-# IDE
-.idea/
-.vscode/
-*.swp
-*.swo
-
-# Logs
-*.log
-
-# Temp
-tmp/
-temp/
-*.tmp
-
-# Build
-dist/
-build/
-
-# Local config
-.env
-.env.local
